--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <link href="css/app.css" rel="stylesheet">    
+    <meta charset="utf-8">
+    <link href="css/app.css" rel="stylesheet">
   </head>
   <body>
     <div id="content"></div>
